fix: Resolve service loading and user mapping issues
- Fix UserGraphQLService to include all required Service fields in queries
- Add fallback queries for services with missing requiresScheduling field
- Handle null values in service data with proper defaults
- Add comprehensive debugging to dashboard service loading
- Create utility scripts for service creation and debugging
- Add proper error handling for GraphQL schema mismatches

Fixes issue where Ramji's services weren't displaying in UI despite being in database

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "add-services": "node scripts/add-services-simple.js",
+    "add-services:ramji": "node scripts/add-services-simple.js de5d0750-d4b5-4ac7-8888-57344a6b5019",
+    "list-users": "node scripts/list-users.js"
   },
   "private": true,
   "dependencies": {
