Fix admin implementation compilation errors and update Angular config
- Add 'admin' category to ErrorLogEntry interface to support admin service logging
- Remove deprecated vendorChunk property from Angular production configuration
- Fixes TypeScript compilation errors in AdminService
- Prepares admin dashboard for deployment

--- a/angular.json
+++ b/angular.json
@@ -54,8 +54,7 @@
               "optimization": true,
               "extractLicenses": true,
               "sourceMap": false,
-              "namedChunks": false,
-              "vendorChunk": true
+              "namedChunks": false
             },
             "development": {
               "optimization": false,
