Updated hostings to S3, version fixes, budget increase

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -7,7 +7,7 @@
     "framework": "angular",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "dist/hourbank-app",
+      "DistributionDir": "dist/hourbank-app/browser",
       "BuildCommand": "npm run build",
       "StartCommand": "ng serve"
     }
