--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
     "@angular/platform-browser-dynamic": "^19.2.14",
     "@angular/router": "^19.2.14",
     "@aws-amplify/ui-angular": "^5.1.3",
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/app": "^7.0.1",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
+    "@capacitor/device": "^7.0.1",
+    "@capacitor/ios": "^7.4.2",
+    "@capacitor/preferences": "^7.0.1",
+    "@ionic/angular": "^8.6.5",
+    "@ionic/angular-toolkit": "^12.2.0",
+    "@ionic/storage-angular": "^4.0.0",
     "aws-amplify": "^6.15.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
