added more mobile files

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:mobile": "ng build --configuration production",
+    "cap:sync": "npx cap sync",
+    "cap:build:android": "npm run build:mobile && npx cap sync android && npx cap open android",
+    "cap:run:android": "npm run build:mobile && npx cap sync android && npx cap run android",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "add-services": "node scripts/add-services-simple.js",
