--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-amplify/ui-angular": "^5.1.3",
     "@capacitor/android": "^7.4.2",
     "@capacitor/app": "^7.0.1",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/device": "^7.0.1",
