--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,7 @@
 {
-  "whyContinueWithGen1": "Prefer not to answer",
+  "providers": [
+    "awscloudformation"
+  ],
   "projectName": "hourbankapp",
   "version": "3.1",
   "frontend": "javascript",
@@ -7,12 +9,9 @@
     "framework": "angular",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "dist/hourbank-app/browser",
-      "BuildCommand": "npm run build",
+      "DistributionDir": "dist",
+      "BuildCommand": "npm run-script build",
       "StartCommand": "ng serve"
     }
-  },
-  "providers": [
-    "awscloudformation"
-  ]
+  }
 }
