--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -9,7 +9,7 @@
     "framework": "angular",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "dist",
+      "DistributionDir": "dist/hourbank-app/browser",
       "BuildCommand": "npm run-script build",
       "StartCommand": "ng serve"
     }
