Implement build number system for dev UI display
- Created build-config.json to track build numbers across deployments
- Added increment-build.js script to automatically increment build numbers
- Created BuildInfoComponent to display build info at bottom of dev UI
- Added Amplify pre-build hook to increment build number on AWS deployments
- Updated package.json scripts for build number management
- Enhanced environment files with buildInfo configuration

Features:
✅ Build number increments automatically on each AWS deployment
✅ Build info displayed at bottom of dev UI (development only)
✅ Shows build number, version, environment, and build date
✅ Responsive design for mobile and desktop
✅ Monospace font for technical information display
✅ Color-coded information (green build number, blue version, etc.)

Technical Implementation:
- Build number persisted in git-tracked build-config.json
- Automatic environment file updates with build information
- Amplify pre-build hook integration for AWS deployments
- Component only renders in development environment
- Fixed positioning at bottom of screen with backdrop blur

Build System:
- npm run build:increment - Increment build and build for dev
- npm run build:prod - Increment build and build for production
- Amplify automatically increments on publish
- Build info includes: number, date, version, environment

Current Build: #3 | v1.0.0 | development | Jul 28, 02:42

Build Status: ✅ Successfully builds and ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,7 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
+# Build configuration (tracked to persist build numbers)
+# build-config.json - intentionally tracked
+
 #amplify-do-not-edit-end
