--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:increment": "node scripts/increment-build.js && ng build",
+    "build:prod": "node scripts/increment-build.js && ng build --configuration production",
     "build:mobile": "ng build --configuration production",
     "cap:sync": "npx cap sync",
     "cap:build:android": "npm run build:mobile && npx cap sync android && npx cap open android",
