Update build script to automatically increment build number
- Modified package.json build script to run increment-build.js before ng build
- This ensures build number increments on every Amplify deployment
- Build number is now 4 and will increment with each AWS publish
- Environment files updated with latest build information

Build System:
✅ npm run build - Increments build number and builds
✅ Amplify publish - Automatically increments build number
✅ Build info displayed in dev UI at bottom of screen
✅ Build number persisted across deployments

Current Build: #4 | v1.0.0 | development | Jul 28, 02:45

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node scripts/increment-build.js && ng build",
     "build:increment": "node scripts/increment-build.js && ng build",
     "build:prod": "node scripts/increment-build.js && ng build --configuration production",
     "build:mobile": "ng build --configuration production",
