--- a/package.json
+++ b/package.json
@@ -48,13 +48,18 @@
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
+    "@modelcontextprotocol/sdk": "^1.17.0",
     "@types/jasmine": "~5.1.0",
+    "fs-extra": "^11.3.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "puppeteer": "^24.15.0",
+    "sharp": "^0.34.3",
+    "typescript": "~5.7.2",
+    "xml2js": "^0.6.2"
   }
 }
