chore: Add diagrams folder to gitignore
- Exclude diagrams folder from version control
- Remove previously committed diagram files
- Keep diagrams folder local for development use only

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,6 @@ amplifytools.xcconfig
 # build-config.json - intentionally tracked
 
 #amplify-do-not-edit-end
+
+# Diagrams folder - contains generated architecture diagrams
+/diagrams
